login fragment updated with splash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Loginwithfragements">
         <activity
+            android:name=".bottomnavigation"
+            android:exported="false" />
+        <activity
+            android:name=".splashscreen"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".register"
             android:exported="false" />
         <activity
-            android:name=".bottomnavigation"
+            android:name=".backofsplash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
